TAG: egload-tr8543_2-2
TAG: egload-tr8543_2-1
DATE: 06/26/2008
STAFF: sc
CHANGES: initial tag for testing

TAG: egload-tr8543_2-BP
DATE: 06/26/2008
STAFF: sc
CHANGES: branch point tag for reopened tr8543

TAG: egload-4-0-0-8
DATE: 06/17/2008
STAFF: sc
CHANGES: GUIdsByMarkerKeyLookup change query order 
	by _Marker_key instead of EGID

TAG: egload-4-0-0-7
DATE: 05/07/2008
STAFF: sc
CHANGES: merge tr8543 branch to trunk

TAG: egload-tr8543-4
TAG: egload-tr8543-3
TAG: egload-tr8543-2
TAG: egload-tr8543-1
DATE: 04/17/2008
DATE: 04/15/2008
STAFF: lec
CHANGES:
1) added GUIdsByMarkerKeyLookup
2) added GUQuery
3) added GUIdsLookup
4) updated EntrezGeneBucketizer
5) updated EntrezGeneLoader

TAG: egload-tr8543-BP
DATE: 03/26/2008
STAFF: lec
CHANGES:
1) branch point tag for TR8543

TAG: egload-tr8832-BP
DATE: 03/06/2008
STAFF: lec
CHANGES:
1) branch point tag for TR8832

TAG: egload-4-0-0-6
DATE: 03/05/2008
STAFF: lec
CHANGES:
1) TR8543/mouse EntrezGene load changes - gene unification

TAG: egload-4-0-0-5
TAG: egload-4-0-0-4
TAG: egload-4-0-0-3
TAG: egload-4-0-0-2
DATE: 02/28/2008
DATE: 02/26/2008
STAFF: lec
CHANGES:
1) TR8543/mouse EntrezGene load changes - gene unification

TAG: egload-4-0-0-1
DATE: 01/30/2008
STAFF: lec
CHANGES:
1) TR8743; add NG_ sequences

TAG: egload-3-5-1-9
DATE: 01/18/2007
STAFF: lec
CHANGES:
1) print line counts in tab-delimited reports

TAG: egload-3-5-1-8
DATE: 01/03/2007
STAFF: lec
CHANGES:
1) fix html/tab format

TAG: egload-3-5-1-7
TAG: egload-3-5-1-6
TAG: egload-3-5-1-5
DATE: 12/21/2006
STAFF: lec
CHANGES:
1) TR8068

TAG: egload-3-5-1-4
DATE: 12/19/2006
STAFF: lec
CHANGES:
1) re-vise HTML formatting

TAG: egload-3-5-1-3
TAG: egload-3-5-1-2
DATE: 10/23/2006
STAFF: lec
CHANGES:
1) merged tr7894 branch

TAG: egload-tr7894-10
DATE: 10/17/2006
STAFF: lec
CHANGES:
1) TR7894

TAG: egload-tr7894-9
DATE: 10/11/2006
STAFF: lec
CHANGES:
1) TR7894
2) TR7943

TAG: egload-tr7894-8
DATE: 10/10/2006
STAFF: lec
CHANGES:
1) TR7894
2) TR7943
